fix: increased toast size, hide scrollbars

--- a/src/components/Tipping/style.css
+++ b/src/components/Tipping/style.css
@@ -3,7 +3,7 @@
   background: #fff;
   color: #000;
   border-radius: 6px;
-  margin: 16px;
+  margin: 30px;
   display: inline-block;
   padding: 1em;
   text-align: center;
